[package]
name = "password_hash_salt"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# MISC
sha2 = "0.10.8"
rand = "0.8.5"
# Back
tide = "0.16"
async-std = { version = "1.10", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
opentelemetry = { version = "0.19", features = ["rt-async-std"] }
opentelemetry-jaeger = "0.19"