[package]
name = "password_hash_salt"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# MISC
sha2 = "0.10.8"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }

# Back
tide = "0.16"
async-std = { version = "1.10", features = ["attributes"] }
