[package]
name = "password_hash_salt"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# MISC
sha2 = "0.10.8"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }

# Back
tide = "0.16"
tokio = { version = "1.37.0", features = ["full"] }

# Telemetry
opentelemetry = { version = "0.22.0", features = ["default"] }
opentelemetry-semantic-conventions = { version = "0.14.0" }
opentelemetry_sdk = { version = "*", features = ["rt-async-std", "rt-tokio"] }
opentelemetry-otlp = { version = "*", features = ["grpc-tonic"] }